<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Eat It Server</string>
    <string name="slogan">Hi This is a Server Side APP, Which is for the company users only</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tracking_order">Map</string>
    <string name="sign_in">Sign In</string>
    <string name="detail">Detail</string>
    <string name="address">Address</string>
    <string name="onethousand">$1000</string>
    <string name="orderphone">Order Phone</string>
    <string name="phonenumber">Phone Number</string>
    <string name="phone">61111111</string>
    <string name="password">password</string>
    <string name="passwordNum">1234</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="select">SELECT</string>
    <string name="upload">UpLoad</string>
    <string name="nameoffood">Name of Food</string>
    <string name="nameofmenu">Name of Menu</string>
    <string name="androidstudio">Android Studio</string>
    <string name="productdiscount">Product Discount</string>
    <string name="productprice">Product Price</string>
    <string name="status">Status</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="direction">Direction</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="signout">Sign Out</string>
    <string name="setting">Settings</string>
    <string name="comment">Comment</string>
    <string name="productquantity">Product Quantity</string>

</resources>