<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_margin="8dp"
app:cardElevation="4dp"
    >

<LinearLayout
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="horizontal"
    android:layout_gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_id"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_family"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textColor="#111111"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/order_status"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_family"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:text="@string/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/order_phone"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_family"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:text="@string/phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/order_address"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/font_family"
                android:gravity="center_vertical|start"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnEdit"
                android:contentDescription="TODO"
                android:text="@string/edit"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnRemove"
                android:contentDescription="TODO"
                android:text="@string/remove"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnDetail"
                android:contentDescription="TODO"
                android:text="@string/detail"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnDirection"
                android:contentDescription="TODO"
                android:text="@string/direction"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                />
        </LinearLayout>

    </LinearLayout>





</LinearLayout>



</androidx.cardview.widget.CardView>